fixed footer. still stuck at top of page.

--- a/css/index.less
+++ b/css/index.less
@@ -140,6 +140,7 @@ input {
 ul#horizontal-list {
 	list-style: none;
 	padding-top: 20px;
+  padding-left: 0px !important;
   text-align: center;
 }
 
